style(vwc-calendar): design & spec updates (#884)

--- a/components/calendar/src/partials/_vwc-calendar-variables.scss
+++ b/components/calendar/src/partials/_vwc-calendar-variables.scss
@@ -1,10 +1,11 @@
-// snap fraction within an hour
-$fraction: 4;
 // number of columns according to days of week
 $total-columns: 7;
 // the rows according to hours a day
 $total-rows: 24;
 
+$gap: 1px;
+
+$calendar-shape: --vvd-calendar-shape;
 
 // event variables
 $color: --vvd-calendar-event--primary-color;
