--- a/common/foundation/scss/mixins/_shape-mixins.scss
+++ b/common/foundation/scss/mixins/_shape-mixins.scss
@@ -1,15 +1,20 @@
 @use '../variable-names/shape-variable-names' as shape-var-names;
+@use 'sass:list';
 
 $variable-name: --shape !default;
 
 @function get-default-selector($list, $default) {
-	$selectors: '';
+	@if list.length($list) == 1 {
+		@return ':host';
+	}
+
+	$compound: '';
 	@each $key, $_ in $list {
 		@if $key != $default {
-			$selectors: $selectors + ':not(#{template($key)})';
+			$compound: $compound + ':not(#{template($key)})';
 		}
 	}
-	@return ':host(#{$selectors})';
+	@return ':host(#{$compound})';
 }
 
 @function template($key) {
@@ -24,7 +29,7 @@ $variable-name: --shape !default;
 	),
 	$default: rounded
 ) {
-	@each $key, $shape in $shapes {
+	@each $key, $value in $shapes {
 		$selector: ();
 		@if ($key == $default) {
 			// if is default also add case for not assigning shape properly
@@ -40,7 +45,7 @@ $variable-name: --shape !default;
 		$selector: join($selector, ':host(#{template($key)})', $separator: comma);
 
 		#{$selector} {
-			#{$variable-name}: #{$shape};
+			#{$variable-name}: #{$value};
 		}
 	}
 }
