--- a/common/scheme/src/scheme.dark.scss
+++ b/common/scheme/src/scheme.dark.scss
@@ -2,6 +2,10 @@
 @use '@vonage/vvd-design-tokens/build/scss/schemes/dark/alternate.scss';
 @use '_scheme-mixins';
 
+// will set system-colors (canvas,canvasText) if not set explicitly
+:root {
+	color-scheme: dark;
+}
 
 @include scheme-mixins.scheme-context-variables {
 	@include main.variables;
