--- a/components/audio/src/vwc-audio.scss
+++ b/components/audio/src/vwc-audio.scss
@@ -41,12 +41,25 @@
 		}
 
 		> .playhead-position {
+			display: inline-flex;
 			overflow: hidden;
 			width: 90px;
 			box-sizing: border-box;
+			justify-content: center;
 			text-align: center;
 			text-overflow: ellipsis;
 			white-space: pre;
+			> span:nth-child(1) {
+				flex: 1 0;
+				text-align: right;
+			}
+			> span:nth-child(3) {
+				flex: 1 0;
+				text-align: left;
+			}
+			> span:nth-child(2) {
+				flex: 0 0 12px;
+			}
 		}
 	}
 }
