Now creates a test page per component

--- a/ui-tests/assets/testPage.js.tmpl
+++ b/ui-tests/assets/testPage.js.tmpl
@@ -1,7 +1,7 @@
 import vvdCore from '@vonage/vvd-core';
 ${testImports}
-import { waitInterval } from '../test/test-helpers';
-import './assets/testPage.css';
+import { waitInterval } from '../../../test/test-helpers';
+import '../../assets/testPage.css';
 
 const wrapper = document.createElement('div');
 wrapper.id = 'main';
