--- a/components/accordion/src/vwc-accordion.scss
+++ b/components/accordion/src/vwc-accordion.scss
@@ -1,4 +1,10 @@
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+
 :host {
 	display: flex;
 	flex-direction: column;
+}
+
+::slotted(vwc-expansion-panel:not(:only-of-type)) {
+	border-bottom: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
 }
