font face types autogenerated

--- a/components/text/src/vwc-text.scss
+++ b/components/text/src/vwc-text.scss
@@ -2,7 +2,7 @@
 @use '@vonage/vvd-design-tokens/build/scss/typography-variables/web' as typography-scale;
 
 @each $key, $value in typography-scale.$typography-category-list {
-	[font-face="#{$key}"i] {
+	:host[font-face="#{$key}"i] {
 		@include typography.typography-cat-shorthand($key);
 	}
 }
