--- a/components/button-toggle-group/src/vwc-button-toggle-group.scss
+++ b/components/button-toggle-group/src/vwc-button-toggle-group.scss
@@ -31,7 +31,7 @@ $sizes: (
 // TODO::remove these when viv-485 is complete
 
 ::slotted(#{vwc-button}) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-base});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-focus-opacity: 0;
@@ -39,40 +39,39 @@ $sizes: (
 
 :host([accent]) {
 	::slotted(#{vwc-button}[selected]) {
-		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
+		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
 		--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
 	}
 
 	::slotted(#{vwc-button}:hover:not([selected])) {
-		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
+		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-20});
 	}
 }
 
 ::slotted(#{vwc-button}[selected]) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
 }
 
 ::slotted(#{vwc-button}:hover:not([selected])) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-20});
 }
 
 :host([disabled]) ::slotted(#{vwc-button}),
 :host([disabled]) ::slotted(#{vwc-button}[selected]) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
-	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-50});
+	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-20});
 	pointer-events: none;
 }
 // End of viv-485 removal
 
 @each $scope in $scopes {
 	::slotted(vwc-#{$scope}) {
-		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-base});
 		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-on-base});
 		--vvd-#{$scope}-shape: var(#{$vvd-toggle-button-group-shape});
 	}
 
 	::slotted(vwc-#{$scope}[selected]) {
-		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
 	}
 
 	:host([accent]) {
@@ -109,7 +108,7 @@ $sizes: (
 	}
 
 	::slotted(vwc-#{$scope}:hover:not([selected])) {
-		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-40});
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-20});
 	}
 
 	::slotted(vwc-#{$scope}:not(:first-child):not(:last-child)) {
@@ -137,8 +136,7 @@ $sizes: (
 	}
 
 	:host([disabled]) ::slotted(vwc-#{$scope}), :host([disabled][accent]) ::slotted(vwc-#{$scope}[selected]) {
-		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
-		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-neutral-50});
+		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-neutral-20});
 		pointer-events: none;
 	}
 
