--- a/components/button-group/src/vwc-button-group.scss
+++ b/components/button-group/src/vwc-button-group.scss
@@ -30,7 +30,7 @@ $sizes: (
 
 :host([raised]) {
 	border-radius: var(#{$vvd-button-group-shape});
-	box-shadow: 0px 4px 2px rgba(19, 20, 21, 0.05), 0px 2px 4px rgba(19, 20, 21, 0.05), 0px 2px 8px rgba(19, 20, 21, 0.1);
+	box-shadow: 0 4px 2px rgba(19, 20, 21, 0.05), 0 2px 4px rgba(19, 20, 21, 0.05), 0 2px 8px rgba(19, 20, 21, 0.1);
 }
 // TODO::remove these when viv-485 is complete
 
