patched constructed stylesheet for textfield

--- a/components/textfield/src/vwc-textfield.scss
+++ b/components/textfield/src/vwc-textfield.scss
@@ -230,4 +230,5 @@ vwc-notched-outline {
 .mdc-text-field--with-leading-icon.mdc-text-field--outlined
 .mdc-floating-label {
 	left: 40px;
+	font-size: var(--mdc-typography-subtitle1-font-size);
 }
