fix(textfield): patched constructed stylesheet for textfield (#954)
* patched constructed stylesheet for textfield

* relevant selector

Co-authored-by: yinonov <yinon@hotmail.com>

--- a/components/textfield/src/vwc-textfield.scss
+++ b/components/textfield/src/vwc-textfield.scss
@@ -225,6 +225,7 @@ vwc-notched-outline {
 
 .mdc-text-field--with-leading-icon.mdc-text-field--outlined
 .mdc-floating-label--float-above {
+	font-size: var(--mdc-typography-subtitle1-font-size);
 	transform: translateY(-18px);
 }
 .mdc-text-field--with-leading-icon.mdc-text-field--outlined
