focus on color rather than fill

--- a/components/icon/src/vwc-icon.scss
+++ b/components/icon/src/vwc-icon.scss
@@ -1,10 +1,6 @@
 @use 'partials/vwc-icon-variables' as icon-variables;
+@forward 'partials/vwc-icon-connotation';
 
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta announcement success alert info
-);
-
-@include color-connotation.connotations-main;
 
 :host([size='small']) {
 	#{icon-variables.$icon-size-variable-name}: 16px;
@@ -40,7 +36,7 @@
 
 		> svg {
 			block-size: 100%;
-			fill: var(#{color-connotation.$vvd-color-connotation}, currentColor);
+			fill: currentColor;
 			inline-size: 100%;
 			vertical-align: super;
 		}
