--- a/components/icon/src/partials/_vwc-icon-connotation.scss
+++ b/components/icon/src/partials/_vwc-icon-connotation.scss
@@ -1,14 +1,14 @@
-$icon-color-connotation: --vvd-icon-color-connotation;
-$icon-color-on-connotation: --vvd-icon-color-on-connotation;
+$icon-color: --vvd-icon-color;
+// $icon-color-on-connotation: --vvd-icon-color-on-connotation;
 
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
 	$connotations-set: primary cta announcement success alert info,
-	$connotation-variable: #{$icon-color-connotation},
-	$on-connotation-variable: #{$icon-color-on-connotation}
+	$connotation-variable: #{$icon-color},
+	// $on-connotation-variable: #{$icon-color-on-connotation}
 );
 
 @include color-connotation.connotations-main;
 
 :host {
-	color: var(#{$icon-color-connotation}, currentColor);
+	color: var(#{$icon-color}, currentColor);
 }
