--- a/components/list/src/vwc-list.scss
+++ b/components/list/src/vwc-list.scss
@@ -14,13 +14,13 @@
 		#{scheme-variables.$vvd-color-neutral-70}
 	);
 
-	#{$vvd-list-color-divider}: var(#{scheme-variables.$vvd-color-neutral-30});
+	#{variables.$vvd-list-color-divider}: var(#{scheme-variables.$vvd-color-neutral-30});
 
 	.mdc-deprecated-list {
 		@include typography.typography-cat-shorthand('body-2');
 	}
 
 	.mdc-deprecated-list ::slotted([divider]) {
-		border-bottom-color: var(#{$vvd-list-color-divider});
+		border-bottom-color: var(#{variables.$vvd-list-color-divider});
 	}
 }
