feat(vwc-icon): connotation support (#957)
* feat(vwc-icon): connotation support

* focus on color rather than fill

* story fix

* feature scoped connotation

* uneeded variable

* chore(workspace): decoupled from ts modules

Co-authored-by: Tal Weinfeld <tal.weinfeld@vonage.com>
Co-authored-by: tveinfeld <67224311+tveinfeld@users.noreply.github.com>

--- a/components/icon/src/vwc-icon.scss
+++ b/components/icon/src/vwc-icon.scss
@@ -1,4 +1,6 @@
-@use './vwc-icon-variables' as icon-variables;
+@use 'partials/vwc-icon-variables' as icon-variables;
+@forward 'partials/vwc-icon-connotation';
+
 
 :host([size='small']) {
 	#{icon-variables.$icon-size-variable-name}: 16px;
