--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -91,7 +91,7 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 		bottom: 0;
 		left: var(#{$vvd-list-item-side-padding});
 		height: 1px;
-		border-bottom: 1px solid var(#{variables.$vvd-list-color-divider});
+		border-bottom: 1px solid var(#{variables.$vvd-list-divider--color});
 		content: '';
 	}
 
