feat(data-grid): allow to set grid height according to container or parent
Co-authored-by: yinon <yinon@hotmail.com>

--- a/components/data-grid/src/vwc-data-grid.scss
+++ b/components/data-grid/src/vwc-data-grid.scss
@@ -6,11 +6,7 @@
 }
 
 .vvd-grid-engine-root {
-	display: flex;
-	width: var(--vvd-data-grid-width);
-	min-width: var(--vvd-data-grid-min-width);
-	height: var(--vvd-data-grid-height);
-	min-height: var(--vvd-data-grid-min-height);
+	height: 100%;
 }
 
 .vvd-grid-footer {
