--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -3,5 +3,9 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 
 :host {
-	inline-size: '240px';
+	inline-size: 240px;
+}
+
+.side-drawer {
+	inline-size: inherit;
 }
