--- a/components/data-grid/src/vwc-data-grid.scss
+++ b/components/data-grid/src/vwc-data-grid.scss
@@ -1,14 +1,11 @@
 @use '@vonage/vvd-typography/scss/typography';
 
 :host {
-	display: flex;
-	min-width: 200px;
-	height: 320px;
-	min-height: 150px;
+	block-size: 320px;
 }
 
 .vvd-grid-engine-root {
-	height: auto;
+	block-size: inherit;
 }
 
 .vvd-grid-footer {
