--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -7,6 +7,10 @@
 }
 
 .side-drawer {
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
 	background-color: var(--vvd-color-base);
 	color: var(--vvd-color-on-base);
 	inline-size: inherit;
