chore(button): expose css variables for colors and shape

--- a/components/button/src/_vwc-button-variables.scss
+++ b/components/button/src/_vwc-button-variables.scss
@@ -1,1 +1,6 @@
 $button-icon-size-variable-name: --vvd-button-icon-size;
+$vvd-button-background-color: --vvd-button-background-color;
+$vvd-button-color: --vvd-button-color;
+$vvd-button-shape: --vvd-button-shape;
+$vvd-button-shape: --vvd-button-border;
+
