--- a/components/empty-state/src/vwc-empty-state.scss
+++ b/components/empty-state/src/vwc-empty-state.scss
@@ -33,10 +33,12 @@ section {
 
 h3 {
 	@include typography.typography-cat-shorthand('body-1-bold');
+	margin: 0;
 }
 
 p {
 	@include typography.typography-cat-shorthand('body-2');
+	margin: 0;
 }
 
 .illustration + h3 {
